# budu-waf

./: .gitignore  BUDU-DEV.md  Cargo.toml  LICENSE  README.md
config/: budu.toml  rules.toml
contrib/fail2ban/action.d/: budu-blocklist.conf
contrib/fail2ban/filter.d/: budu.conf
contrib/fail2ban/jail.d/: budu.conf
crates/budu/: Cargo.toml
crates/budu-common/: Cargo.toml
crates/budu-common/src/: error.rs  lib.rs
crates/budu-config/: Cargo.toml
crates/budu-config/src/: lib.rs  size.rs
crates/budu-parser/: Cargo.toml
crates/budu-parser/src/: lib.rs
crates/budu-pipeline/: Cargo.toml
crates/budu-pipeline/src/: lib.rs  sanity.rs
crates/budu-proxy/: Cargo.toml
crates/budu-proxy/src/: admin.rs  lib.rs  reqid.rs
crates/budu-ratelimit/: Cargo.toml
crates/budu-ratelimit/src/: lib.rs
crates/budu-reputation/: Cargo.toml
crates/budu-reputation/src/: geoip.rs  lib.rs
crates/budu-rules/: Cargo.toml
crates/budu-rules/src/: lib.rs  modsec.rs  ruleset.rs  stage.rs
crates/budu-signatures/: Cargo.toml
crates/budu-signatures/src/: builtin.rs  db.rs  lib.rs  stage.rs
crates/budu/src/: ban.rs  main.rs
docs/: CONFIGURATION.md  CRS-IMPORT.md  FAIL2BAN.md  OPERATIONS.md  RULES.md  SIGNATURES.md
