[package]
name = "budu-config"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
budu-common = { workspace = true }
serde       = { workspace = true }
toml        = { workspace = true }
ipnet       = { workspace = true }
http        = "1"
thiserror   = { workspace = true }
