[package]
name = "budu-ratelimit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
budu-common = { workspace = true }
budu-config = { workspace = true }
governor    = { workspace = true }
moka        = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
http = "1"
