[package]
name = "budu-reputation"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
geoip = ["dep:maxminddb"]
remote-blocklist = ["dep:reqwest"]
# Timed (auto-expiring) blocklist entries — the `until=<epoch>` line syntax used
# by the fail2ban integration. Off → entries are always permanent.
fail2ban = []

[dependencies]
budu-common = { workspace = true }
budu-config = { workspace = true }
arc-swap    = { workspace = true }
ipnet       = { workspace = true }
http        = "1"
tracing     = { workspace = true }
anyhow      = { workspace = true }
maxminddb   = { workspace = true, optional = true }
reqwest     = { workspace = true, optional = true }
