[package]
name = "budu-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
# Pure-Rust libinjection port (no C toolchain needed).
libinjection = ["dep:libinjectionrs"]

[dependencies]
budu-common    = { workspace = true }
budu-config    = { workspace = true }
budu-ratelimit = { workspace = true }
budu-parser    = { workspace = true }
arc-swap    = { workspace = true }
ipnet       = { workspace = true }
regex       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
thiserror   = { workspace = true }
http        = "1"
tracing     = { workspace = true }
libinjectionrs = { version = "0.1", optional = true }

[dev-dependencies]
http = "1"
